fix line-height and overflow issues

--- a/app/frontend/src/Presenter/Display.css
+++ b/app/frontend/src/Presenter/Display.css
@@ -23,7 +23,6 @@
 
 .display .next-line {
   height: auto;
-  line-height: 20vh;
 }
 
 .background.display .background-image {
