--- a/app/frontend/src/Presenter/Line.css
+++ b/app/frontend/src/Presenter/Line.css
@@ -6,7 +6,6 @@
     justify-content: space-around;
     padding: 1vh;
     text-align: center;
-    overflow: hidden;
 }
 
 .line p {
